--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "arumi-top",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/vercel": "^8.1.2",
-    "@tailwindcss/vite": "^4.0.14",
-    "astro": "^5.5.2",
-    "tailwindcss": "^4.0.14"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
-  }
+	"name": "arumi-top",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/vercel": "^8.1.2",
+		"@tailwindcss/vite": "^4.0.14",
+		"astro": "^5.5.2",
+		"sharp": "^0.33.5",
+		"tailwindcss": "^4.0.14",
+		"@tailwindcss/typography": "^0.5.16"
+	}
 }
