--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 		"@tailwindcss/vite": "^4.1.17",
 		"astro": "^5.15.9",
 		"tailwindcss": "^4.1.17"
+	},
+	"devDependencies": {
+		"sharp": "^0.34.5"
 	}
 }
